# c2tk

./: .gitignore  CITATION.cff  LICENSE  README.md  c2tk  matk  pyproject.toml  requirements.txt  setup.cfg  setup.py
.docker/: Dockerfile  Dockerfile.arch  Dockerfile.debian  Dockerfile.fedora  Dockerfile.mpich  Dockerfile.nvidia  docker-compose.yml
examples/: Untitled.ipynb  main.py  test.ipynb  test.py  test_matk.ipynb  test_psi4.py
src/c2tk/: __init__.py  atoms.py  conformer.py  settings.py  xyz2mol.py
src/c2tk/calculators/: calculator.py  gpaw.py  nwchem.py  orca.py
src/matk/: atoms.py  conformer.py  molecule.py  nwchem.py  settings.py
src/matk/calculators/: calculator.py  nwchem.py
