[metadata]
# replace with your username:
name = c2tk
version = 0.0.1
author = Jinserk Baik
author_email = jinserk.baik@gmail.com
description = C2TK: Computational Chemistry Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jinserk/c2tk.git
project_urls =
    Bug Tracker = https://github.com/jinserk/c2tk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
